# ctfs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
247ctf/: addition_verifier.py
247ctf/miscellaneous/an_impossible_number/: main.py
247ctf/miscellaneous/hidden_painting/: main.py
247ctf/miscellaneous/the_flag_lottery/: main.py
247ctf/miscellaneous/the_text_editor_jail/: the_text_editor_jail.txt
247ctf/networking/error_reporting_protocol/: main.py
247ctf/networking/multiplication_tables/: main.py
247ctf/networking/not_my_modulus/: main.py
247ctf/reversing/the_more_the_merrier/: main.py
247ctf/web/acid_flag_bank/: main.py
247ctf/web/flag_api_key/: main.py
247ctf/web/flag_authorizer/: cookie_cracker.sh  main.py
247ctf/web/forgotten_file_pointer/: main.sh
247ctf/web/secured_session/: main.py
247ctf/web/twig_injector/: twig_injector.go
hacker101/BugDB v1/: main.py
hacker101/Cody's First Blog/: main.py
hacker101/Photo Gallery/: main.py
