[tool.poetry]
name = "ctfs"
version = "0.1.0"
description = "Collection of ctf solutions"
authors = ["Abhishek Guha <abhi.workspace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
scapy = "^2.5.0"
pyopenssl = "^23.3.0"
pycryptodome = "^3.19.0"
matplotlib = "^3.8.2"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
